--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint --ext .js,.vue src test/e2e/specs"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "jquery": "^1.12.4",
     "vue": "^2.4.2",
     "vue-router": "^2.7.0"
