--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.16.2",
     "jquery": "^1.12.4",
     "vue": "^2.4.2",
+    "vue-lazyload": "^1.1.3",
     "vue-router": "^2.7.0"
   },
   "devDependencies": {
