--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "exif-js": "^2.3.0",
     "jquery": "^1.12.4",
     "vue": "^2.4.2",
     "vue-lazyload": "^1.1.3",
